# bridgecard-core-sdk

./: .gitignore  README.md  pyproject.toml
bridgecard_core_sdk/: bridgecard_core_sdk.py
bridgecard_core_sdk /: bridgecard_core_sdk.py
bridgecard_core_sdk /core/bwatch/middleware/: middleware.py
bridgecard_core_sdk /core/core_db/repository/: cache_repository.py  cardholders_repository.py
bridgecard_core_sdk /core/core_db/utils/: core_db_data_context.py
bridgecard_core_sdk /issuing/billing_service/: Makefile  model.py
bridgecard_core_sdk /issuing/billing_service/protos/: billing_details.proto  billing_details_pb2.py
bridgecard_core_sdk /issuing/transaction_monitoring_service/: transaction_monitoring_service.py
bridgecard_core_sdk /issuing/transaction_monitoring_service/protos/: transaction_monitoring_details_pb2.py  transaction_monitoring_details_pb2_grpc.py
bridgecard_core_sdk/core/bwatch/: bwatch.py
bridgecard_core_sdk/core/core_auth/: core_auth.py
bridgecard_core_sdk/core/core_auth/schema/: base_schema.py
bridgecard_core_sdk/core/core_db/: core_db.py
bridgecard_core_sdk/core/core_db/repository/: __init__.py  account_transactions_repository.py  accounts_repository.py  admin_repository.py  base_repository.py  bc_gb_internal_sandbox_repository.py  billing_repository.py  blacklisted_cardholders_repository.py  (+20 more)
bridgecard_core_sdk/core/core_webhook/: core_webhook.py  error.py
bridgecard_core_sdk/issuing/billing_service/: billing_service.py
bridgecard_core_sdk/issuing/transaction_monitoring_service/: model.py  transaction_monitoring_service.py
(+16 files in other folders)
