[tool.poetry]
name = "bridgecard-core-sdk"
version = "0.1.0"
description = ""
authors = ["enfinity <festusowumi@gmail.com>"]
readme = "README.md"
packages = [{include = "bridgecard_core_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"
grpcio-tools = "^1.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
